# jupyterlab_code_formatter

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README-new.md  README.md  RELEASE.md  Taskfile.yml  conftest.py  default.nix  dev-hist.md  dev.Dockerfile  dev.md  docker-compose.dev.yml  environment-frozen.yml  environment.yml  install.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-readthedocs.txt  requirements-test.txt  requirements.txt  setup.py  start_env.sh  tsconfig.json  tsconfig.tsbuildinfo
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/wip-workflows/: build.yml
.github/workflows/: build.yml  check-release.yml  ci.yml  prep-release.yml  publish-release.yml  update-integration-tests.yml
binder/: environment.yml  postBuild
dev/: Dockerfile  format.sh  install-dev-packages.sh  install-r-packages.sh  lint.sh  requirements.in  requirements.txt  start-jupyterlab.sh  test.sh
dev/scripts/: docker-build.sh  docker-run.sh
docs/: .buildinfo  changelog.html  changelog.md  changelog.rst  conf.py  configuration.html  configuration.md  custom-formatter.html  custom-formatter.md  dev.html  dev.md  dev.rst  faq.html  faq.md  faq.rst  genindex.html  getting-help.md  how-to-use.rst  index.html  index.md  index.rst  installation.html  installation.md  installation.rst  jupyterhub.html  jupyterhub.md  objects.inv  search.html  searchindex.js  usage.html  usage.md  your-support.html  your-support.md
docs/.doctrees/: changelog.doctree  configuration.doctree  custom-formatter.doctree  dev.doctree  environment.pickle  faq.doctree  index.doctree  installation.doctree  jupyterhub.doctree  usage.doctree  your-support.doctree
docs/_sources/: changelog.md.txt  configuration.md.txt  custom-formatter.md.txt  dev.md.txt  faq.md.txt  jupyterhub.md.txt
docs/_static/: documentation_options.js
docs_src/: changelog.md  conf.py  configuration.md  dev.md  index.md  installation.md  usage.md
jupyter-config/: jupyterlab-code-formatter.json  jupyterlab_code_formatter.json
jupyter-config/nb-config/: jupyterlab_code_formatter.json
jupyterlab_code_formatter/: __init__.py  _version.py  formatters.py  handlers.py
jupyterlab_code_formatter/tests/: __init__.py  conftest.py  test_formatters.py  test_handlers.py
labextension/: package-lock.json  package.json
labextension/schema/: settings.json
labextension/src/: client.ts  constants.ts  formatter.ts  index.ts
local/: Untitled.ipynb  Untitled1.ipynb  Untitled3.ipynb  testing2.py  wot.py
schema/: settings.json
scripts/: build.sh  format.sh  test.sh
serverextension/: pyproject.toml  setup.py
serverextension/jupyterlab_code_formatter/: formatters.py  handlers.py
serverextension/jupyterlab_code_formatter/tests/: test_handlers.py
src/: client.ts  constants.ts  formatter.ts  index.ts
src/__tests__/: jupyterlab_code_formatter.spec.ts
test_snippets/: Untitled.ipynb  some_python.py  test_notebook.ipynb  test_notebook_crablang.ipynb  test_with_errors.ipynb
ui-tests/: package.json
ui-tests/tests/: jupyterlab_code_formatter.spec.ts
