[tool.poetry]
name = "jupyterlab_code_formatter"
version = "1.0.3"
description = "Server extension to power `@ryantam626/jupyterlab_code_formatter` npm package."
authors = ["Ryan Tam <ryantam626@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
jupyterlab = "^1.2"
notebook = "^6.0"
packaging = "^19.2"

[tool.poetry.dev-dependencies]
rpy2 = "^3.2"
autopep8 = "^1.4"
yapf = "^0.28.0"
isort = "^4.3"
pytest = "^5.3"
jsonschema = "^3.2"
requests = "^2.22"
black = {version = "^black-19.10b0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
